# e-commerce

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.airflow.yml  docker-compose.bronze.yml  docker-compose.inference.yml  docker-compose.kafka.yml  docker-compose.legacy.yml  docker-compose.mart.yml  docker-compose.metric.yml  docker-compose.override.yml  docker-compose.pipeline.yml  docker-compose.query.yml  docker-compose.spark-control-plane.yml  docker-compose.spark-master.yml  docker-compose.spark-worker-cdc.yml  docker-compose.spark-worker-etl.yml  docker-compose.spark-worker.yml  docker-compose.storage.yml  docker-compose.thrift.yml  docker-compose.worker.yml  docker-compose.yml  download.sh  model_test.py  nodes_desc.txt  pyproject.toml  ray.py  requirements.txt  run_e2k.py  run_inference.py  run_inference2.py  run_mp.py  run_ray.py  run_sentiment.py  setup-hadoop-env.sh  test_batch_size.py  translate.py
ansible/: ansible.cfg  README.md  ansible.cfg  hdfs_cluster.yml  inventory.yml  playbook_hdfs.yml  playbook_k8s.yml  playbook_spark.yml
ansible/group_vars/: all.yml  cluster_hdfs.yml  cluster_k8s.yml  cluster_spark.yml  hdfs_cluster.yml
codex/: .env.example  .gitignore
codex/docs/: commands.md
codex/inference/: postprocess.ipynb  run_sentiment.py
codex/notebooks/: features.md  features_candidate.md
configs/airflow/: .env.airflow  airflow.cfg  spark-iceberg.conf
configs/dbt/: profiles.yml
configs/inference/: 1_eng2kor.yml  1_eng_senti.yml  1_por2eng.yml  2_eng2kor.yml  2_eng_senti.yml  2_por2eng.yml  eng2kor_1.yml  eng2kor_2.yml  eng2kor_gather.yml  por2eng_1.yml  por2eng_2.yml  por2eng_gather.yml  template.yml
configs/jmx/: kafka.yml  spark_driver.yml  spark_executor.yml
configs/kafka/: .env.example  .env.kafka  server1.properties  server2.properties  server3.properties
configs/postprocess/: template.yml
dags/: pipeline.py  silver.py  test.py
docker/: install.sh  remove_all.sh
docs/: ansible.md  arch1.txt  arch2.txt  eda_dissatisfaction_hypo.md  erd.dbml  ghcr_spark_image_guide.md  hadoop.md  infra copy.mmd  infra.mmd  mvp.md  pipeline.mmd  sla.md
eda/: README.md  create_tmp_schema.py  customers.ipynb  erd_final.dbml  erd_tmp.dbml  features.md  features_candidate.md  legacy.md  overall.ipynb  reviews.ipynb  source.md  translated_review.ipynb
eda/time/: run.ipynb
erd/: check_relationship.ipynb  create_tmp_schema.py  erd.dbml
hadoop/: README.md  install.sh  run.sh  setup.sh
hadoop-3.4.1/: hadoop.sh  install-java.sh  install.sh  setup.sh
hdfs/: cp-env.sh  hadoop-env.sh  java-env.sh
inference/: __init__.py  io.py  postprocess.ipynb  preprocess.py  run_sentiment.py  setup.py
infra/: docker-compose.datahub.yml  docker-compose.dev.yml  docker-compose.legacy.yml  docker-compose.override.yml  docker-compose.yml
jobs/: batch.py  batch_test.py  bronze.py  bronze2silver.py  cdc.py  down.sh  eng2kor.py  inference.py  load.py  load_origin.py  metric.sh  por2eng.py  publish.py  raw2bronze.py  run_dag.py  silver.py  start.sh  stream.py  subscribe.py  transform.py  up.sh
k8s/: sparkpi-job.yaml
k8s-data-platform/: README.md
postgres/: docker-compose.yml  init.sql
preprocess/: geolocation.ipynb  product.ipynb
scripts/: create_topics.sh  download_olist.sh  metric.sh  register_schema.sh  start.sh
simulator/: run.py
spark/: Dockerfile  README.md  push_image.sh
src/: __init__.py
translate/: __main__.py  config.py  loader.py  pipeline.py  preprocess.py  run.py  run_auto.py  run_cpu.py  run_cpu_modi.py
(+878 files in other folders)
