[project]
name = "e-commerce"
version = "0.1.0"
description = ""
authors = [
    {name = "jmhwang-dev",email = "jungmin.hwang.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "duckdb (>=1.3.1,<2.0.0)",
    "kaggle (>=1.7.4.5,<2.0.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "transformers (==4.51.3)",
    "torch (==2.6.0)",
    "accelerate (==1.6.0)",
    "emoji (>=2.14.1,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  { include = "*", from = "src" }
]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.4.1"

